--- a/style.css
+++ b/style.css
@@ -3,4 +3,5 @@ P{COLOR: BLACK; TEXT-ALIGN: LEFT; font-family: GEORGIA; font-size: 30PX; font-va
 H4{Color:BLACK; text-align: LEFT; FONT-FAMILY: GEORGIA; line-height: 10%}
 BODY{background-color: #6496ff; border: 5px solid maroon; padding-bottom: 50px; padding-left: 150px; padding-right: 150px; padding-top: 50px;}
 P1{color: white;}
+P2{color: white; TEXT-ALIGN: RIGHT;}
 DIV{ }
