--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 H1{COLOR: BLACK; TEXT-ALIGN: CENTER; font-family: GEORGIA; font-variant: SMALL-CAPS; line-height: 10%}
 P{COLOR: BLACK; TEXT-ALIGN: LEFT; font-family: GEORGIA; font-size: 30PX; font-variant: small-caps;line-height; : 20%}
 H4{Color:BLACK; text-align: LEFT; FONT-FAMILY: GEORGIA; line-height: 10%}
-BODY{background-color: #6496ff; border: 5px solid maroon; padding-bottom: 50px; padding-left: 150px; padding-right: 150px; padding-top: 50px;}
+BODY{background-color: #6496ff; border: 5px solid grey; padding-bottom: 50px; padding-left: 150px; padding-right: 150px; padding-top: 50px;}
 P1{color: white;}
 P2{color: white; TEXT-ALIGN: CENTER;}
+P3 {TEXT-VARIENT: SRONG;}
 DIV{ }
