--- a/style.css
+++ b/style.css
@@ -4,5 +4,6 @@ H4{Color:BLACK; text-align: LEFT; FONT-FAMILY: GEORGIA; line-height: 10%}
 BODY{background-color: #6496ff; border: 5px solid grey; padding-bottom: 50px; padding-left: 150px; padding-right: 150px; padding-top: 50px;}
 P1{color: white;}
 P2{color: white; TEXT-ALIGN: CENTER;}
-P3 {TEXT-VARIENT: SRONG;}
+P3{FONT-VARIENT: SRONG;}
+P4{COLOR: BLACK; line-height: 10%;} 
 DIV{ }
