--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ P{COLOR: BLACK; TEXT-ALIGN: LEFT; font-family: GEORGIA; font-size: 30PX; font-va
 H4{Color:BLACK; text-align: LEFT; FONT-FAMILY: GEORGIA; line-height: 10%; font-size: 20PX;}
 BODY{background-color: #6496ff; border: 5px solid grey; padding-bottom: 50px; padding-left: 150px; padding-right: 150px; padding-top: 50px;}
 H6{COLOR: BLACK; line-height: 10%; font-family:GEORGIA; TEXT-ALIGN: RIGHT;}
+div{float: right;}
 P3{FONT-VARIENT: SRONG;}
 P4{COLOR: BLACK; line-height: 10%;} 
 DIV{ }
