--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 H1{COLOR: BLACK; TEXT-ALIGN: CENTER; font-family: GEORGIA; font-variant: SMALL-CAPS; line-height: 10%}
+img {
+  border: 1px solid black;
+  padding: 5px;
+}
 P{COLOR: BLACK; TEXT-ALIGN: LEFT; font-family: GEORGIA; font-size: 30PX; font-variant: small-caps; line-height:20%;}
 H4{Color:BLACK; text-align: LEFT; FONT-FAMILY: GEORGIA; line-height: 10%; font-size: 20PX;}
 BODY{background-color: #6496ff; border: 5px solid grey; padding-bottom: 50px; padding-left: 150px; padding-right: 150px; padding-top: 50px;}
