--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
-H1{COLOR: BLACK; TEXT-ALIGN: CENTER; font-family: GEORGIA; font-variant: SMALL-CAPS; line-height: 10%}
+H1{
+padding-top: 10px;
+font-size: 36px;
+padding:0px;
+margin: 0px;
+line-height:100px;
+text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+width:310px;
+float:left;
+}
+.slogan{
+float: right;
+margin:75px 20px 0px 0px;
+font-size: 20px;
+}
 img {
   border: 1px solid black;
   padding: 5px;
