--- a/style.css
+++ b/style.css
@@ -1,12 +1,5 @@
 H1{
-padding-top: 10px;
-font-size: 36px;
-padding:0px;
-margin: 0px;
-line-height:100px;
-text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-width:310px;
-}
+{COLOR: BLACK; TEXT-ALIGN: CENTER; font-family: GEORGIA; font-variant: SMALL-CAPS; line-height: 10%; background-color: red;}
 
 img {
   border: 1px solid black;
