--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 H1{
-{COLOR: BLACK; TEXT-ALIGN: CENTER; font-family: GEORGIA; font-variant: SMALL-CAPS; line-height: 10%;}
+COLOR: BLACK; TEXT-ALIGN: CENTER; font-family: GEORGIA; font-variant: SMALL-CAPS; line-height: 10%;}
 img{
   border: 1px solid black;
   padding: 5px;
