--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ TEXT-ALIGN: CENTER;
 font-family: GEORGIA; 
 font-variant: SMALL-CAPS; 
 line-height: 10%;
-background-color: gray;
+background-color: #000066;
 padding-bottom: 50px;
 }
 
@@ -25,7 +25,7 @@ H4{
   font-size: 20PX;
   }
 BODY{
-  background-color: #6496ff; 
+  background-color: #e6e6e6; 
   border: 5px solid grey; 
   padding-bottom: 50px; 
   padding-left: 150px; 
