--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-family: GEORGIA;
 font-variant: SMALL-CAPS; 
 line-height: 10%;
 background-color: #e6e6e6;
-padding-bottom: 50px;
+padding-bottom: 10px;
 }
 
 P{
@@ -40,7 +40,7 @@ H6{
   
 }
 div{
-  float: right;
+  float: center;
   
 }
 P3{
