--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ H5{
   font-family: GEORGIA;
   font-size: 15PX;
   line-height: 5%;
+  padding-bottom: 10PX;
+  padding-top: 10PX;
 }
 H4{
   Color:BLACK; 
