--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ P{
 H5{
   COLOR: BLACK;
   font-family: GEORGIA;
+	margin: 0 0 16px 0;
+	padding: 0 0 32px 0;
+	font-style: italic;
+	font-size: 20px;
 }
 H4{
   Color:BLACK; 
