--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ P{
   font-size: 30PX; 
   font-variant: small-caps; 
   line-height:20%;
-  border: 1px solid #000000;
+  border-bottom: 1px solid #000000; padding-top: 20PX;
 }
 
 H4{
