--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ H4{
   }
 BODY{
   background-color: #1a8bff; 
-  border: 5px solid grey; 
+  border: 5px solid black; 
   padding-bottom: 50px; 
   padding-left: 150px; 
   padding-right: 150px; 
