--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@ font-variant: SMALL-CAPS;
 line-height: 10%;
 padding-bottom: 10px;
 }
+  /* Title strip color */
+#banner-inner {
+border: 0;
+top: 0;
+height: 180px;
+background: rgba(12, 140, 89, 0.6); 
+}
+#banner-header {
+margin-top: 110px;
+}
+}
 
 P{
   COLOR: BLACK; 
@@ -14,7 +25,6 @@ P{
   font-size: 30PX; 
   font-variant: small-caps; 
   line-height:20%;
-  text-decoration: underline;
 }
 
 H4{
