--- a/style.css
+++ b/style.css
@@ -7,8 +7,11 @@ line-height: 10%;
 padding-bottom: 10px;
 }
 #header{
-  background-color: green;
-  padding: 5px;
+  background-color: dark blue;
+  padding: 10px;
+}
+#CareerProfile{
+  background-color: white;
 }
 
 P{
@@ -28,7 +31,7 @@ H4{
   font-size: 20PX;
   font-variant: small-caps;
   }
-BODY{
+#Content{
   background-color: #1a8bff; 
   border: 5px solid black; 
   padding-bottom: 50px; 
