--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ H4{
   font-variant: small-caps;
   }
 
-#Content{
+#body{
   background-color: #1a8bff; 
   padding-bottom: 50px; 
   padding-top: 50px;
