--- a/style.css
+++ b/style.css
@@ -7,11 +7,10 @@ line-height: 10%;
 padding-bottom: 10px;
 }
 #header{
-  background-color: dark blue;
   padding: 10px;
 }
 #CareerProfile{
-  background-color: white;
+
 }
 
 P{
@@ -31,9 +30,10 @@ H4{
   font-size: 20PX;
   font-variant: small-caps;
   }
-
+body{
+  background-color: red;
+}
 #body{
-  background-color: #1a8bff; 
   padding-bottom: 50px; 
   padding-top: 50px;
   }
