--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ H4{
   font-variant: small-caps;
   }
 body{
-  background-color: red;
+  background-color: #51B8F0;
 }
 #body{
   padding-bottom: 50px; 
