--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ line-height: 10%;
 padding-bottom: 10px;
 }
 #header{
-  padding: 10px;
+  padding: 15px;
   background-color: red;
 }
 #CareerProfile{
@@ -37,6 +37,8 @@ body{
 #body{
   padding-bottom: 50px; 
   padding-top: 50px;
+  padding-right: 150px;
+  padding-left: 150px;
   }
 
 H6{
