--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ H4{
 body{
   background-color: #51B8F0;
 }
-#body{
+#Content{
   padding-bottom: 50px; 
   padding-top: 50px;
   padding-right: 150px;
