--- a/style.css
+++ b/style.css
@@ -7,12 +7,10 @@ line-height: 10%;
 padding-bottom: 10px;
 }
 #header{
-  padding: 15px;
+  padding: 30px;
   background-color: red;
 }
-#name{
-  padding-bottom: 20px;
-}
+
 #CareerProfile{
 
 }
@@ -36,7 +34,7 @@ H4{
   }
 body{
   background-color: #51B8F0;
-  background-image: url("paper.gif");
+  background-image: paper.gif;
 }
 #Content{
   padding-bottom: 50px; 
