--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ H4{
   }
 body{
   background-color: #FFFFF;
-  background-image: url("lined_paper.png");
+  background-image: url("http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/858/thumbs/reflective-abstract-malleable-metal-4.jpg");
 }
 #Content{
   padding-bottom: 50px; 
