--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ H4{
   font-variant: small-caps;
   }
 body{
-  background-image: url("http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/858/thumbs/reflective-abstract-malleable-metal-4.jpg");
+  background-image: url("blue-stripes-patterns-8.jpg");
 }
   background-color: #FFFFF;
   
