--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ H4{
   font-variant: small-caps;
   }
 body{
-  background-image: url("blue-stripes-patterns-8.jpg");
+  background-image: url("http://backgrounds.mysitemyway.com/background/blue-stripes-patterns-8/");
 }
   background-color: #FFFFF;
   
