--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ H4{
   font-variant: small-caps;
   }
 body{
-  background-image: url("http://backgrounds.mysitemyway.com/background/blue-stripes-patterns-8/");
+  background-image: url("http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/706/full/blue-stripes-patterns-8.jpg");
 }
   background-color: #FFFFF;
   
