--- a/style.css
+++ b/style.css
@@ -41,7 +41,19 @@ body{
   background-image: url("http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/706/full/blue-stripes-patterns-8.jpg");
   background-color: #FFFFF;
 }
-  
+ div.transbox {
+  margin: 30px;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.6;
+  filter: alpha(opacity=60); /* For IE8 and earlier */
+}
+
+div.transbox p {
+  margin: 5%;
+  font-weight: bold;
+  color: #000000;
+} 
   
 #Content{
   padding-bottom: 50px; 
