--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
 }
  div.transbox {
   margin: 30px;
-  background-color: #ffffff;
+  background-color: #B4CFDB;
   border: 1px solid black;
   opacity: 0.5;
   filter: alpha(opacity=60); 
