--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ H4{
   padding-left: 150px;
 }
 body{
-  background-image: url("http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/706/full/blue-stripes-patterns-8.jpg");
+  background-image: url("http://i2.wp.com/inspirationhut.net/wp-content/uploads/2013/05/61.png?resize=698%2C278");
   background-color: #FFFFF;
 }
  
