--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ H4{
   padding-left: 150px;
 }
 body{
-  background-image: url("http://www.stripegenerator.com/generators/generate_stripes.php?fore=D5E7F7&h=30&w=26&p=15&back1=ffffff&back2=ff0000&gt=0&d=3&shadow=0&");
+  background-image: url("http://www.stripegenerator.com/#Zm9yZT1ENUU3Rjc7aD0zMDt3PTI2O3A9MTU7YmFjazE9ZmZmZmZmO2JhY2syPWZmMDAwMDtndD0wO2Q9MztzaGFkb3c9MDs=");
   background-color: #FFFFF;
 }
  
