--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ H4{
   padding-left: 150px;
 }
 body{
-  background-image: url("http://www.stripegenerator.com/#Zm9yZT1ENUU3Rjc7aD0zMDt3PTI2O3A9MTU7YmFjazE9ZmZmZmZmO2JhY2syPWZmMDAwMDtndD0wO2Q9MztzaGFkb3c9MDs=");
+  background-image: url("url('http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/1194/full/seamless-baby-blue-patterns-1.jpg')!important");
   background-color: #FFFFF;
 }
  
