--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ H4{
   padding-left: 150px;
 }
 body{
-  background-image: url("url('http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/1194/full/seamless-baby-blue-patterns-1.jpg')!important");
+  background-image: url("http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/1194/full/seamless-baby-blue-patterns-1.jpg')!important");
   background-color: #FFFFF;
 }
  
