--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ H4{
   padding-left: 150px;
 }
 body{
-  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAQAAAD8fJRsAAAAc0lEQVQYV3XPsRGDMBBEUQUkRNRGERSiRD3QhkJyE1CDKITAek4sbA9mo53582fvQgh6UXEooj606K2qLMmq9USianz3URUbKPKpB1lp9ZC+QHLcGXurtxu/Vz1NH739sYsmzLpwjRmL4Qo6C7Z/zmDzeAGgX3HWQa5zcgAAAABJRU5ErkJggg==");
+  background-image: url("http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/1194/full/seamless-baby-blue-patterns-1.jpg");
   background-color: #FFFFF;
 }
  
