--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ H2{
 
 #header{
   padding: 30px;
-  background-color: #70BFE0;
+  background-color: #7DA5D4;
   border: 1px #293F4A solid;
 }
 img{
