--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ padding-bottom: 10px;
 }
 H2{ 
   COLOR: BLACK;
-  TEXT-ALIGN: RIGHT;
+  TEXT-ALIGN: CENTER;
   font-family: GEORGIA;
   line-height: .6;
 }
