--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+header{
+  padding: 30px;
+  background-color: #7DA5D4;
+  border: 1px #293F4A solid;
+}
 H1{
 COLOR: BLACK; 
 FONT-SIZE: 40PX;
@@ -23,11 +28,7 @@ H2{
 }
 
 
-#header{
-  padding: 30px;
-  background-color: #7DA5D4;
-  border: 1px #293F4A solid;
-}
+
 
 #CareerProfile{
 
