--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@ padding-bottom: 10px;
 }
 
 
-  img {
+img {
     float: right;
     border: 1px solid black;
-    margin: 0 px 100 px 0 px 0 px;
+    position: absolute;
+    margin: 0 px 0 px 0 px 0 px;
 }
 
 H2{ 
