--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ padding-bottom: 10px;
 img {
     float: right;
     border: 1px solid black;
-    position: absolute;
+    vertical-align: center;
     margin: 0 px 0 px 0 px 0 px;
 }
 
