--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ padding-bottom: 10px;
 img {
     float: right;
     border: 1px solid black;
-    vertical-align: center;
-    margin: 0 px 0 px 0 px 0 px;
+    padding: 0 px 100 px 0 px 0 px;
 }
 
 H2{ 
