--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ img {
     float: right;
     border: 1px solid black;
     padding: 0 px 100 px 0 px 0 px;
-    vertical-align = center;
+    vertical-align = text-bottom;
 }
 
 H2{ 
