--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ img {
     border: 1px solid black;
     padding: 0 px 100 px 0 px 0 px;
     vertical-align: text-bottom;
+    border-radius: 30 px;
 }
 
 H2{ 
