--- a/style.css
+++ b/style.css
@@ -16,11 +16,10 @@ padding-bottom: 10px;
 
 
 img {
+    margin-bottom: 100px;
     float: right;
     border: 1px solid black;
-    padding: 0 px 100 px 0 px 0 px;
-    vertical-align: text-bottom;
-    border-radius: 30 px;
+    
 }
 
 H2{ 
