--- a/style.css
+++ b/style.css
@@ -16,10 +16,12 @@ padding-bottom: 10px;
 
 
 img {
-    margin-bottom: 100px;
-    float: right;
-    border: 1px solid black;
-    
+     background: darkgray;
+  height: 100px;
+  width: 100px;
+  margin-top: 100px;
+  margin-right: 100px;
+  float:right;
 }
 
 H2{ 
