--- a/style.css
+++ b/style.css
@@ -16,12 +16,9 @@ padding-bottom: 10px;
 
 
 img {
-     background: darkgray;
-  height: 100px;
-  width: 100px;
-  margin-top: 100px;
-  margin-right: 100px;
-  float:right;
+    margin-bottom: 100px;
+    float: right;
+    border: 1px solid black;
 }
 
 H2{ 
