--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ padding-bottom: 10px;
 
 
 img {
-    margin-bottom: 100px;
+    margin: 100px;
     float: right;
     border: 1px solid black;
 }
