--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header{
-  margin: 30px;
+  margin: 0px 0px 50px 50px;
   padding: 30px;
   background-color: #7DA5D4;
   border: 1px #293F4A solid;
