--- a/style.css
+++ b/style.css
@@ -69,13 +69,17 @@ body{
 }
  
   
-#Content{
+main{
   padding-bottom: 50px; 
   padding-top: 50px;
   padding-right: 50px;
   padding-left: 50px;
   }
-
+nav{
+  COLOR: BLACK; 
+  line-height: 50%;
+  
+}
 H6{
   COLOR: BLACK; 
   font-size: 20px;
