--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ img {
 
 H2{ 
   COLOR: BLACK;
-  FONT-SIZE: 0px;
+  FONT-SIZE: 20px;
   TEXT-ALIGN: LEFT;
   font-family: GEORGIA;
   line-height: .6;
@@ -77,6 +77,7 @@ main{
   padding-left: 50px;
   }
 nav{
+  margins: 10px;
   COLOR: BLACK; 
   line-height: 60%;
   
