--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ padding-bottom: 10px;
 
 
 img {
-    margin-top: 50px;
+    margin-bottom: 100px;
     float: right;
     border: 1px solid black;
 }
@@ -31,7 +31,7 @@ H2{
 }
 section{
 
-
+}
 P{
   COLOR: BLACK; 
   TEXT-ALIGN: LEFT; 
@@ -90,4 +90,4 @@ P4{
   COLOR: BLACK; 
   line-height: 36%;
 } 
-}
+
