--- a/style.css
+++ b/style.css
@@ -18,8 +18,10 @@ padding-bottom: 10px;
 
 img {
     margin-bottom: 100px;
-    float: right;
     border: 1px solid black;
+    padding-bottom: 100px;
+    float: right;
+    
 }
 
 H2{ 
