--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ section{
 
 }
 P{
-  COLOR: gray; 
+  COLOR: BLACK; 
   TEXT-ALIGN: LEFT; 
   font-family: GEORGIA; Times; serif
   font-size: 30PX; 
