--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ P{
   COLOR: BLACK; 
   TEXT-ALIGN: LEFT; 
   font-family: GEORGIA; Times; serif
-  font-size: 30PX; 
+  font-size: 35PX; 
   font-variant: small-caps; 
   line-height:25%;
 }
@@ -49,7 +49,7 @@ P1{
   line-height: 20px;
 }
 
-H4: {
+H4 {
   Color: BLACK; 
   text-align:LEFT; 
   FONT-FAMILY: GEORGIA; Times; serif
