--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ H4 {
   line-height: 10%; 
   font-size: 20PX;
   font-variant: small-caps;
-  transition: font-size; .2; ease; 0.2; 
+  transition: font-size; .2s; ease; 0.2s; 
   }
   
 H4: hover {
