--- a/style.css
+++ b/style.css
@@ -31,7 +31,15 @@ H2{
   line-height: .6;
 }
 section{
-
+.fade
+{
+        opacity:0.5;
+}
+.fade:hover
+{
+        opacity:1;
+}
+(Make sure you s
 }
 P{
   COLOR: BLACK; 
