--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ H2{
   font-family: GEORGIA; Times; serif
   line-height: .6;
 }
-div transition {
+transition {
   transition: font-size; 2s; ease; 2s;
 }
 
