--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 header{
   margin: 50px 0px 0px 0px;
   padding: 30px;
-  background-color: #7DA5D4;
+  background-color: #919299;
   border: 1px #293F4A solid;
-  border-radius: 20%;
 }
 
 H1{
@@ -69,8 +68,7 @@ H4: hover {
   
 
 body {
-  background-image: url("http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/1194/full/seamless-baby-blue-patterns-1.jpg");
-  background-color: #FFFFF;
+  background-color: #242F75;
 }
  
   
