--- a/style.css
+++ b/style.css
@@ -29,7 +29,14 @@ H2 {
   font-family: GEORGIA; Times; serif
   line-height: .6;
 }
-
+#content {
+  float: right ;
+  width: 80% ;
+}
+#navbar {
+  float: right;
+  width: 20%;
+}
 section{
 
 }
