--- a/style.css
+++ b/style.css
@@ -22,17 +22,10 @@ img {
     float: right;
 }
 #nav {
-    line-height:30px;
-    background-color:#eeeeee;
-    height:300px;
-    width:100px;
     float:left;
-    padding:5px; 
 }
 #section {
-    width:350px;
-    float:left;
-    padding:10px; 
+    float:right;
 }
 #innercontent {
   padding-left: 10px ;
