--- a/style.css
+++ b/style.css
@@ -24,9 +24,11 @@ img {
 #nav {
     width: 40%;
     line-height: 50%;
+    float: left;
 }
 #section {
-    width: 40%;
+ float: left;   
+ width: 40%;
     line-height: 50%;
 }
 
