--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ img {
     border: 1px solid black;
     float: right;
 }
-#nav {
+.nav {
     width: 40%;
     line-height: 50%;
     float: left;
 }
-#section {
+.section {
  float: left;   
  width: 40%;
     line-height: 50%;
