--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ FONT-SIZE: 40PX;
 TEXT-ALIGN: LEFT; 
 font-family: GEORGIA; Times; serif
 font-variant: SMALL-CAPS; 
-
 padding-bottom: 10px;
 }
 
@@ -20,5 +19,9 @@ img {
     border: 1px solid black;
     float: right;
 }
-
+.main {
+-webkit-columns: 300px 2;
+   -moz-columns: 300px 2;
+        columns: 300px 2;
+}
 
