--- a/style.css
+++ b/style.css
@@ -20,8 +20,11 @@ img {
     float: right;
 }
 .main {
--webkit-columns: 300px 2;
-   -moz-columns: 300px 2;
-        columns: 300px 2;
+  -webkit-columns: 4 150px;
+  -moz-columns: 4 150px;
+  columns: 4 150px;
+  -webkit-column-gap: 2em;
+  -moz-column-gap: 2em;
+  column-gap: 2em;
 }
 
