--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ img {
     border: 1px solid black;
     float: right;
 }
-.main {
+main {
   -webkit-columns: 4 150px;
   -moz-columns: 4 150px;
   columns: 4 150px;
