--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ font-family: GEORGIA; Times; serif
 font-variant: SMALL-CAPS; 
 padding-bottom: 10px;
 }
+BODY{
+  background-color: dark blue;
+}
 P{
   COLOR: white;
   FONT-SIZE:;
