--- a/style.css
+++ b/style.css
@@ -46,6 +46,6 @@ main {
   -webkit-column-gap: 3em;
   -moz-column-gap: 3em;
   column-gap: 3em;
-  background-color: dark blue;
+  background-color: #242F75;
 }
 
