--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header{
 }
 
 H1{
-COLOR: white; 
+COLOR: black; 
 FONT-SIZE: 40PX;
 TEXT-ALIGN: LEFT; 
 font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
@@ -15,26 +15,26 @@ padding-bottom: 10px;
 }
 
 BODY{
-  background-color: #242F75;
+  background-color: white;
 }
 
 P{
-  COLOR: white;
+  COLOR: black;
   FONT-SIZE:;
   font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 H2{
-  COLOR: white;
+  COLOR: black;
   FONT-SIZE:;
   font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 H3{
-  COLOR: white;
+  COLOR: black;
   FONT-SIZE:;
   font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 H4{
-  COLOR: white;
+  COLOR: black;
   FONT-SIZE:;
   font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
@@ -48,11 +48,10 @@ LI {
   font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;;
 }
 .hideme {
-  COLOR: white;
+  COLOR: black;
   font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 main {
- 
   background-color: white;
 }
 
