--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ header{
 H1{
 COLOR: black; 
 FONT-SIZE: 40PX;
-TEXT-ALIGN: LEFT; 
+TEXT-ALIGN: CENTER; 
 font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 font-variant: SMALL-CAPS; 
 padding-bottom: 10px;
