--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ BODY{
 
 P{
   COLOR: black;
-  FONT-SIZE:;
+  FONT-SIZE: 60PX;
   font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 H2{
