--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 header {
-  background-color: #919299;
+  margin: 0 0 0 0;
+  background-image: url("http://static4.grsites.com/archive/textures/blue/blue075.jpg");
   border: 1px #293F4A solid;
 }
 
