--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ padding-bottom: 10px;
 }
 
 BODY{
-  background-color: white;
+  	background-image: url("http://static4.grsites.com/archive/textures/blue/blue075.jpg");
 }
 
 P {
