--- a/style.css
+++ b/style.css
@@ -60,3 +60,6 @@ main {
 
 .grow { transition: all .2s ease-in-out; }
 .grow:hover { transform: scale(1.1); }
+.img-circle {
+    border-radius: 50%;
+}
