--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 header {
   margin: 0 0 0 0;
-  background-color:	#738085;
-  border: 3px black solid;
+  	background-image: url("http://static4.grsites.com/archive/textures/blue/blue075.jpg");
+  
 }
 img {
   border-radius: 50%;
