--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ P {
   FONT-SIZE: 30PX;
   font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
   padding-bottom: 10px;
+  font-style: italic;
 }
 H2{
   COLOR: white;
