--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ main {
     border-radius: 50%;
 }
 
-.myButton {
+show {
 	-moz-box-shadow:inset 1px 0px 3px 0px #f0f7fa;
 	-webkit-box-shadow:inset 1px 0px 3px 0px #f0f7fa;
 	box-shadow:inset 1px 0px 3px 0px #f0f7fa;
@@ -91,7 +91,7 @@ main {
 	text-decoration:none;
 	text-shadow:0px 5px 0px #5b6178;
 }
-.myButton:hover {
+show:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #019ad2), color-stop(1, #33bdef));
 	background:-moz-linear-gradient(top, #019ad2 5%, #33bdef 100%);
 	background:-webkit-linear-gradient(top, #019ad2 5%, #33bdef 100%);
@@ -101,7 +101,7 @@ main {
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#019ad2', endColorstr='#33bdef',GradientType=0);
 	background-color:#019ad2;
 }
-.myButton:active {
+show:active {
 	position:relative;
 	top:1px;
 }
